# aitask

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
aitask/: __main__.py  bot.py  commands.py  config.py  routing.py  utils.py
aitask/ai/: adapter.py  config.py  dependencies.py
aitask/base/: models.py  pagination.py  repository.py  schemas.py  sorting.py
aitask/cache/: config.py  connection.py  lifespan.py
aitask/db/: config.py  connection.py  dependencies.py  exceptions.py  models.py  repository.py  uow.py
aitask/lists/: dependencies.py  keyboards.py  models.py  repositories.py  router.py  service.py
aitask/stats/: calmap.py  config.py  dependencies.py  heat_map.py  pie.py  router.py  service.py
aitask/tasks/: constants.py  dependencies.py  keyboards.py  models.py  repositories.py  router.py  service.py
aitask/users/: config.py  dependencies.py  models.py  repositories.py  router.py  schemas.py  service.py
aitask/voice/: adapter.py  config.py  dependencies.py  router.py  schemas.py  service.py
aitask/workspaces/: dependencies.py  keyboards.py  models.py  repositories.py  router.py  service.py
app/: __main__.py  commands.py  di.py
app/ai/: adapter.py  dependencies.py
app/base/: models.py  repository.py  schemas.py  sorting.py
app/db/: dependencies.py  repository.py  uow.py
app/lists/: keyboards.py  models.py  repositories.py  router.py  service.py  states.py
app/stats/: heat_map.py  pie.py  router.py  service.py
app/tasks/: keyboards.py  models.py  repositories.py  router.py  service.py  states.py
app/users/: dependencies.py  keyboards.py  models.py  router.py  service.py
app/voice/: adapter.py  router.py  (+2 more)
docker/: bot.Dockerfile
migrations/: env.py
scripts/: task_filler.py
wilde/: __main__.py  bot.py  commands.py  config.py  routing.py
(+62 files in other folders)
