[project]
name = "wilde"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.26.0",
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "chatgpt-md-converter==0.1.2",
    "fast-depends==3.0.8",
    "matplotlib==3.9.2",
    "mypy==1.11.2",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "pre-commit==4.0.1",
    "pydantic-settings==2.5.2",
    "redis==5.1.1",
    "ruff==0.6.9",
    "speechrecognition==3.12.0",
    "sqlalchemy==2.0.35",
    "vosk==0.3.45",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
output-format = "concise"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "D", # docstrings
    "DOC", # docstrings
    "ANN", # annotations
    "PTH",  # pathlib
    "RUF001", # string contains ambigous
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
    "RUF012", # mutable class attributes should be annotated with `typing.ClassVar`
    "S101", # use of assert detected
    "TRY003", # avoid specifying long messages outside the exception class
    "PLR6301", # method could be a function, class method, or static method

    # Handled by formatter later
    "ISC001", # single line implicit string concatenation
    "COM812", # missing trailing comma
    "E501", # line too long
]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["INP001"]  # Implicit namespace packages are not allowed
"tests/*" = ["ARG001"]  # Unused function argument
"tests/mocked_bot.py" = ["ALL"]
"scripts/*" = ["ALL"]

[tool.mypy]
strict = true
pretty = true
plugins = "pydantic.mypy"
disable_error_code = ["union-attr"]

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
